--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "spdy": "3.4.7",
     "ua-parser-js": "0.7.17",
     "urijs": "1.19.0",
+    "uuid": "3.1.0",
     "web-push": "3.2.4"
   },
   "devDependencies": {
